Llamado al primer Servlet

--- a/JavaFirstServlet/WebContent/index.html
+++ b/JavaFirstServlet/WebContent/index.html
@@ -5,6 +5,7 @@
 <title>Hello World!!</title>
 </head>
 <body>
-
+	<h1>Primer programa Java WEB:</h1>
+	<a href="dameLaRespuesta">Quien da la materia?</a>
 </body>
 </html>
