style little bit change

--- a/PW2-JSP/WebContent/index.html
+++ b/PW2-JSP/WebContent/index.html
@@ -2,18 +2,19 @@
 <html lang="es">
     <head>
         <meta charset="utf-8">
-        <title>Heladería Tempano de Hielo</title>
-        <link href="css/style.css" type="text/css" rel="stylesheet">
+        <title>Tempano de Hielo - Home</title>
+       <link href="css/style.css" type="text/css" rel="stylesheet">
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     </head>
     <body>
-        <div>
-            <h2>Bienvenido a Tempano de hielo!!!!</h2>
-            <p>Poder usar HTML e incluir tags desde el Servlet es mas copado que escupir todo el HTML!</p>
-		</div>
-		
-		<nav>
-			<a href="controller?action=showLogin">Ingresar al sistema</a>			
-		</nav>
-        
+	    <div class="content-form">
+	    	<div>
+	            <h2>Bienvenido a Tempano de hielo!!!!</h2>
+	            <p>Poder usar HTML e incluir tags desde el Servlet es mas copado que escupir todo el HTML!</p>
+			</div>
+			<nav>
+				<a href="controller?action=showLogin">Ingresar al sistema</a>			
+			</nav>
+	    </div>
     </body>
 </html>
